backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: workspace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend-container
        image: ghcr.io/expruc/kubernetes-gradutaion-drill/k8s-final-drill:backend
        ports:
        - containerPort: 8080
