frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: frontend-service
 namespace: workspace
 labels:
   app: frontend-app
spec:
 selector:     
   app: frontend-app
 ports:
   - protocol: TCP
     port: 32499
     targetPort: 8000
