nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-service
  namespace: workspace
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 30001
      targetPort: 8080
